--- a/popup2.html
+++ b/popup2.html
@@ -2,24 +2,31 @@
   <head>
     <title>Make Your Note!</title>
 	<link rel="stylesheet" type="text/css" href="popup2.css">
-    
+
+	 <script type="text/javascript" src="popup2.js"></script>
+	
 
  </head>
- <script type="text/javascript" src="popup2.js"></script>
+
 
 <!-- Search Form -->
  <body>
+<div id="mic">
+ <img id='mic' src="Mic.png" />
+</div>
+
 <div id="text">    <textarea id="transcript" ></textarea>
 </div>
 <div id= "buttons">
 					<button id="google" class="action-button shadow animate red">Google Search</button>
 					<button id="save" class="action-button shadow animate red">Save Note</button>
 					<button id="open"class="action-button shadow animate red">Open My Notes</button>
+					<button id="copy" class="action-button shadow animate red" >Copy Note</button>
+					<i class="fa fa-play" aria-hidden="true"></i>
+
+					
 </div>
 
-<div id="mic">
- <img id='mic' src="Mic.png" />
-</div>
 
 </body>
 </html>
