--- a/updat.html
+++ b/updat.html
@@ -2,7 +2,7 @@
   <head>
     <title>Make Your Note!</title>
 	<link rel="stylesheet" type="text/css" href="popup2.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 	 <script type="text/javascript" src="popup2.js"></script>
 	
 
@@ -12,8 +12,7 @@
 <!-- Search Form -->
  <body>
 <div id="micDiv">
-	<button id="start"><i class="fa fa-microphone" style="font-size:36px"></i>
-</button>
+	<button id="start">Start Note</button>
 </div>
 
 <div id="text">    <textarea id="transcript" ></textarea>
@@ -23,7 +22,8 @@
 					<button id="save" class="action-button">Save Note</button>
 					<button id="open"class="action-button">Open My Notes</button>
 					<button id="copy" class="action-button" >Copy Note</button>
-			
+					<i class="fa fa-play" aria-hidden="true"></i>
+
 					
 </div>
 
