--- a/update.html
+++ b/update.html
@@ -1,9 +1,9 @@
  <html>
   <head>
     <title>Make Your Note!</title>
-	<link rel="stylesheet" type="text/css" href="popup2.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	 <script type="text/javascript" src="popup2.js"></script>
+	<link rel="stylesheet" type="text/css" href="update.css">
+
+	 <script type="text/javascript" src="update.js"></script>
 	
 
  </head>
@@ -12,18 +12,18 @@
 <!-- Search Form -->
  <body>
 <div id="micDiv">
-	<button id="start"><i class="fa fa-microphone" style="font-size:36px"></i>
-</button>
+	<button id="start">Start Note</button>
 </div>
 
 <div id="text">    <textarea id="transcript" ></textarea>
 </div>
 <div id= "buttons">
 					<button id="google" class="action-button">Google Search</button>
-					<button id="save" class="action-button">Save Note</button>
+					<button id="update" class="action-button">Save Note</button>
 					<button id="open"class="action-button">Open My Notes</button>
 					<button id="copy" class="action-button" >Copy Note</button>
-			
+					<i class="fa fa-play" aria-hidden="true"></i>
+
 					
 </div>
 
